# Online-Auction

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package.json
Presentations/: Presentation1.pptx
online_auction/: Dockerfile  Online-Auction.drawio  db.sqlite3  test.cpp
online_auction/auction/: consumers.py  routing.py  urls.py  views.py
online_auction/auction/migrations/: 0002_item_image.py
online_auction/cpp_backend/: Dockerfile  test  test.cpp
online_auction/java_backend/: Dockerfile  pom.xml
online_auction/online_auction/: asgi.py  settings.py
online_auction/python_backend/: Dockerfile  entrypoint.sh  requirements.txt
online_auction/python_backend/auction/: models.py  serializers.py  urls.py  views.py
online_auction/python_backend/auction/migrations/: 0001_initial.py  0003_alter_item_current_price.py  0004_alter_item_current_price.py  0005_item_price_history.py  0006_remove_item_price_history.py  0007_item_available_duration.py  0008_item_created_at.py  0009_remove_item_available_duration_item_expires_at.py  0010_bidhistory.py  0011_bidhistory_price_alter_bidhistory_history.py  0012_merge_20260213_1554.py
online_auction/python_backend/online_auction/: asgi.py  settings.py  urls.py
online_auction_frontend/: .dockerignore  Dockerfile  package.json
online_auction_frontend/src/: App.tsx  Bid.tsx  BidHistory.tsx  CreateItem.tsx  DeleteAuto.tsx  Form.tsx  Home.tsx  Login.tsx  PostEveryBidHistory.tsx  ProtectedRoute.tsx  Register.tsx  Tokens.tsx  UpdFinalPrice.tsx  UpdateItemStatus 2.tsx  UpdateItemStatus.tsx
(+12 files in other folders)
